Hide tooltip with visibility instead of transitions (Fix #7)

--- a/resources/public/css/discuss.sass
+++ b/resources/public/css/discuss.sass
@@ -75,18 +75,17 @@ $fadetime: 1s
 // Tooltip
 #discuss-tooltip
   position: absolute
-  vertical-align: middle
   color: #fff
   text-align: center
   padding: 0 1em
   border-radius: 6px
   background-color: black
   opacity: 0.8
-  -webkit-animation: fadein $fadetime
-  -moz-animation: fadein $fadetime
-  -ms-animation: fadein $fadetime
-  -o-animation: fadein $fadetime
-  animation: fadein $fadetime
+  //-webkit-animation: fadein $fadetime
+  //-moz-animation: fadein $fadetime
+  //-ms-animation: fadein $fadetime
+  //-o-animation: fadein $fadetime
+  //animation: fadein $fadetime
   ::after
     // Create small arrow at bottom of tooltip
     content: " "
@@ -96,7 +95,6 @@ $fadetime: 1s
     margin-left: -5px
     border: 5px solid transparent
     border-top-color: black
-    opacity: 0.8
 
   .hidden
     -webkit-animation: fadeout $fadetime
